WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277174
[JSC] matchCharacterClassSet() sometimes crashes when taking bitset optimization path
https://bugs.webkit.org/show_bug.cgi?id=277174
Summary
[JSC] matchCharacterClassSet() sometimes crashes when taking bitset optimizat...
Alexey Shvayka
Reported
2024-07-26 15:00:33 PDT
Comment hidden (obsolete)
<
rdar://131168287
>
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2024-07-26 15:08:15 PDT
<
rdar://132448939
>
Alexey Shvayka
Comment 2
2024-07-26 15:09:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31319
EWS
Comment 3
2024-07-27 03:56:34 PDT
Committed
281450@main
(63dab2018790): <
https://commits.webkit.org/281450@main
> Reviewed commits have been landed. Closing PR #31319 and removing active labels.
EWS
Comment 4
2024-07-29 13:41:30 PDT
Committed
280938.146@safari-7619-branch
(30f4749cd6a2): <
https://commits.webkit.org/280938.146@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1512 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug