[JSC] matchCharacterClassSet() sometimes crashes when taking bitset optimization path https://bugs.webkit.org/show_bug.cgi?id=277174 <rdar://132448939>

Unreviewed, reverting 280425@main.

This reverts commit 34b0b047bb64f93ccd1b003d410e0f8b4c9d681b.

Canonical link: https://commits.webkit.org/281450@main